--- a/static/main.css
+++ b/static/main.css
@@ -1,7 +1,11 @@
 body {
     padding: 10px;
     margin: 10px;
-    background: #e8f2f3;
+    background: url('/static/background.png') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 .header {
