--- a/static/main.css
+++ b/static/main.css
@@ -2,6 +2,10 @@ body {
     padding: 10px;
     margin: 10px;
     background: url('/static/background.png') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 .header {
