--- a/static/main.css
+++ b/static/main.css
@@ -1,14 +1,9 @@
 body {
-    padding: 10px;
-    margin: 10px;
-    background-image: url('/static/background.png') ;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: url('/static/background.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
+    background-size: cover;
     -o-background-size: cover;
-    height:100%;
 }
 
 .header {
