--- a/static/main.css
+++ b/static/main.css
@@ -1,8 +1,10 @@
 body {
+    padding: 10px;
+    margin: 10px;
     background: url('/static/background.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    background-size: cover;
+    background-size: cover !important;
     -o-background-size: cover;
 }
 
