--- a/static/main.css
+++ b/static/main.css
@@ -1,11 +1,12 @@
 body {
     padding: 10px;
     margin: 10px;
-    background: url('/static/background.png') no-repeat center center fixed;
-    -webkit-background-size: cover !important;
-    -moz-background-size: cover !important;
-    background-size: cover !important;
-    -o-background-size: cover !important;
+    /* background: url('/static/background.png') no-repeat center center fixed; */
+    background: url('/static/background.jpg') center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 .header {
